--- a/website/style.css
+++ b/website/style.css
@@ -1,5 +1,19 @@
 /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
+h1{
+    text-align: center;
 }
+
+.navbar{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+.navbar a{
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
+
