--- a/website/style.css
+++ b/website/style.css
@@ -1,12 +1,44 @@
 /* styles.css */
-h1{
-    text-align: center;
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    scroll-padding-top: 4rem;
+}
+  
+:root {
+    --main-color: #508D4E;
+    --secondary-color: #D6EFD8;
+    --tertiary-color: #80AF81;
+    --text-color: #110e0e;
+    --bg-color: #fff;
+}
+
+header{
+    background-color: var(--tertiary-color);
+    position: fixed;
+    justify-content: space-between;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1100;
+    display: flex;
+    align-items: center;
+    padding: 8px 64px;
+    transition: 0.4s linear;
+}
+
+body {
+    color: var(--text-color);
 }
 
 .navbar {
-    list-style-type: none;
     padding: 0px;
     margin: 0px;
+    list-style-type: none;
+    display: flex;
 }
 
 .navbar a{
@@ -14,6 +46,23 @@ h1{
     text-decoration: none;
     text-align: center;
     display: block;
-    background-color: black;
+    color: var(--bg-color);
 }
 
+.navbar a:hover{
+    background: var(--main-color);
+    transition: 0.3s;
+    border-radius: 0.3rem;
+}
+
+.homepage{
+    padding: 6px 32px;
+}
+
+
+.boxwrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+}
