--- a/website/style.css
+++ b/website/style.css
@@ -1,19 +1,19 @@
 /* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
+
 *{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Nunito Sans", sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
     scroll-padding-top: 4rem;
 }
   
 :root {
-    --main-color: #508D4E;
-    --secondary-color: #D6EFD8;
-    --tertiary-color: #80AF81;
+    --main-color: #E3A5C7;
+    --secondary-color: #B692C2;
+    --tertiary-color: #FFDFD6;
     --text-color: #110e0e;
-    --bg-color: #fff;
+    --bg-color: #694F8E;
 }
 
 header{
@@ -42,7 +42,7 @@ body {
 }
 
 .navbar a{
-    padding: 14px;
+    padding: 12px;
     text-decoration: none;
     text-align: center;
     display: block;
@@ -56,13 +56,28 @@ body {
 }
 
 .homepage{
-    padding: 6px 32px;
+    padding: 12px 32px;
 }
 
 
-.boxwrap {
-    display: flex;
-    flex-wrap: wrap;
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, auto));
     justify-content: space-between;
     gap: 1rem;
+}
+
+.contentimg{
+    text-align: center;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 15px;
+    object-fit: contain;
+}
+
+img{
+    object-position: center;
+    width: 100%;
+    height: 250px;
 }
