--- a/website/style.css
+++ b/website/style.css
@@ -62,7 +62,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+    grid-template-columns: repeat(auto-fit, minmax(0px, auto));
     justify-content: space-between;
     gap: 1rem;
 }
@@ -74,10 +74,18 @@ body {
     justify-content: center;
     border-radius: 15px;
     object-fit: contain;
+    background: var(--secondary-color)
 }
 
-img{
+.graphimg{
     object-position: center;
     width: 100%;
-    height: 250px;
+    height: 300px;
+    object-fit: contain;
+}
+
+.text{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
